add new versionning system with 2 lines for contents